test/org/midica/testfiles/failing/pattern-def-with-second-arg.midica
INCLUDE inc/instruments.midica

PATTERN p1 test
	0 /4
END


